<resources>
    <string name="underline_text"><u>Contáctanos</u></string>
    <string name="app_name">PetCareAvance</string>
    <string name="id">Ingrese ID</string>
    <string name="navegar">Navegar</string>
    <string name="id_menu">El ID Actual es:</string>
    <string name="inicio">Inicio</string>
    <string name="nav_inicio">Inicio</string>
    <string name="nav_publicar">Publicar</string>
    <string name="nav_soporte">Soporte</string>
    <string name="nav_perfil">Perfil</string>
    <string name="perfil">Perfil</string>
    <string name="publicar">Publicar</string>
    <string name="soporte">Soporte</string>

    <string name="name_sign_up_spaceholder">Nombre</string>
    <string name="lastname_sign_up_spaceholder">Apellido</string>
    <string name="phone_sign_up_spaceholder">Celular</string>
    <string name="dni_sign_up_spaceholder">DNI</string>
    <string name="mail_sign_up_spaceholder">Correo</string>
    <string name="password_sign_up_spaceholder">Contrasenia</string>


    <string name="seleccionar_direccion">seleccionar direccion</string>
    <string name="seleccionar_fecha">seleccionar fecha</string>
    <string name="buscar">Buscar</string>

    <string-array name="opciones">
        <item>Ordenar por nombre A-Z</item>
        <item>Ordenar por nombre Z-A</item>
        <item>Ordenar por precio Mayor-Menor</item>
        <item>Ordenar por precio Menor-Mayor</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="combined_text">
    Gracias por tu solicitud para ser paseador de perros en nuestra app.\n
    Estamos revisando cuidadosamente cada solicitud antes de procesarla.\n
    Pronto recibirás un correo con más detalles. ¡Gracias por tu paciencia!
</string>
    <string name="email">Correo electrónico</string>
    <string name="contrasena">Contraseña</string>
    <string name="publicar_servicio">PUBLICAR SERVICIO</string>
    <string name="editar">EDITAR\n</string>
</resources>